# pdftextstripper

./: README.md  pyproject.toml
src/pdftextstripper/: PdfTextStripper.py  __init__.py
tests/: test_PdfTextStripper.py
